# backend

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.backup  README.md  _SELECT_text_FROM_dip_plenarprotokoll_p_JOIN_dip_plenarprotokoll_202401131120.json  docker-compose.yml  example_docs.json  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
data/database/: README.md  top_topics_20240114_excerpt.txt  top_topics_20240126_excerpt.txt
logs/: logging.json
plaincode/: WordAnalyser.py
scripts/: entrypoint.sh  init-restore.sh  install-python.sh  post_bundestag_top_topics.sh  run-all-checks.sh  run_restore.sh  wait_db_start.sh
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 038e6a9eee2b_merge_69e1b_and_168b8.py  04510c2d194d_create_vorgang_tables.py  168b8f28461f_make_fks_cascade.py  2d2a36a65c30_add_plenarprotokoll_text_and_drucksache_.py  38a83e5e443b_add_import_procedures.py  4244e7fe7beb_update_top_topics_table.py  69e1b60db1cb_create_top_topics_table.py  7579d89290ea_add_association_tables_for_vorgang.py  86512f637f1a_add_mandate_timetable.py  8bae05e2bbd2_init_example_model.py  94b6ec6dbc4d_fix_fundstelle_ids.py  953503180a23_add_vorgang_tables.py  980d5a591c7c_create_bt_tables.py  a431792da233_add_link_to_dip_drucksache_to_.py  a570b683d689_add_drucksache_tables.py  a838547210a6_created_at_and_updated_at_cols.py  c30fb340dbe4_create_plenarprotokoll_and_.py  cd639eb06025_add_some_missing_columns_to_vorgang.py  d49dfefbae07_create_vorgang_table.py  e09b444525fc_rename_old_abstimmungen_procedure.py  e7026a158d4d_add_fraktion_abstimmung.py  f8c93790f568_add_abstimmungen_table.py
src/backend/: 0d5ae238f73b_add_dip_beschlussfassung_id_to_abstimmung_.py
src/backend/app/: main.py  scheduler.py  utils.py
src/backend/app/api/api_v1/: api.py
src/backend/app/api/v1/: api.py
src/backend/app/app_logic/landing_page/: create_bundestag_top_topics.py  get_bundestag_top_topics.py  word_analyser.py
src/backend/app/core/: bundestag_ressorts.py  config.py  logging.py
src/backend/app/crud/: base.py  crud_example.py  crud_vorgang.py
src/backend/app/crud/CRUDApi/: crud_abstimmung.py  crud_beschlussfassung.py  crud_mandate.py  crud_top_topics.py
src/backend/app/crud/CRUDBundestag/: crud_abstimmung.py  crud_abstimmung_redner.py  crud_einzelperson_abstimmung.py
src/backend/app/crud/CRUDDIPBundestag/: crud_drucksache.py  crud_plenarprotokoll.py  crud_plenarprotokoll_vorgangsbezug.py  (+2 more)
src/backend/app/db/: base.py  database.py
src/backend/app/facades/: facade.py  util.py
src/backend/app/importer/: abstimmung_importer.py  base.py  beschlussfassung_importer.py  config.py  dip_bundestag_plenarprotokoll_importer.py  dip_drucksache_importer.py  dip_drucksache_text_importer.py  dip_importer.py  dip_plenarprotokoll_importer.py  dip_plenarprotokoll_text_importer.py  dip_vorgang_importer.py  dip_vorgangsposition_importer.py  import_dip_bundestag.py  mandate_importer.py
src/backend/app/models/: common.py  config.py  example_model.py  vorgang_model.py
src/backend/app/schemas/: schema_example.py
src/backend/app/services/: common.py
src/backend/data/: mandate.csv
(+79 files in other folders)
